# kagari

./: Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/kagari-cli/: Cargo.toml
crates/kagari-cli/src/: main.rs
crates/kagari-common/: Cargo.toml
crates/kagari-common/src/: diagnostic.rs  lib.rs  source.rs  span.rs
crates/kagari-hir/: Cargo.toml
crates/kagari-hir/src/: builtin.rs  lib.rs  source_map.rs  types.rs
crates/kagari-hir/src/hir/: body.rs  ids.rs  mod.rs  pattern.rs  place.rs  stmt.rs  ty.rs
crates/kagari-hir/src/lower/: context.rs  item.rs  mod.rs  stmt.rs  ty.rs
crates/kagari-hir/src/resolver/: collect.rs  mod.rs  resolve.rs  resolved.rs  table.rs
crates/kagari-hir/src/tests/: common.rs  lower.rs  mod.rs  resolver.rs  typeck.rs
crates/kagari-hir/src/typeck/: body.rs  check.rs  mod.rs  table.rs  (+1 more)
crates/kagari-ir/: Cargo.toml
crates/kagari-ir/src/: bytecode.rs  lib.rs  module.rs
crates/kagari-runtime/: Cargo.toml
crates/kagari-runtime/src/: gc.rs  host.rs  lib.rs  reflection.rs  reload.rs  value.rs
crates/kagari-sema/: Cargo.toml
crates/kagari-sema/src/: lib.rs  resolver.rs  typeck.rs  types.rs
crates/kagari-syntax/: Cargo.toml
crates/kagari-syntax/src/: ast.rs  kind.rs  lexer.rs  lib.rs  parser.rs  syntax_node.rs  token.rs
crates/kagari-vm/: Cargo.toml
crates/kagari-vm/src/: error.rs  frame.rs  lib.rs  vm.rs
crates/kagari-vm/src/executor/: aggregate_ops.rs  dispatch.rs  mod.rs  value_ops.rs
crates/kagari-vm/src/tests/: common.rs  execution.rs  helpers.rs  mod.rs
docs/: kagari.ebnf
docs/spec/: bytecode.md  codegen-backend.md  execution.md  host-interop.md  modules.md  reflection.md  runtime.md  security.md  syntax.md  traits.md
(+63 files in other folders)
