[package]
name = "kagari-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kagari-ir.workspace = true
kagari-runtime.workspace = true

[dev-dependencies]
kagari-common.workspace = true
kagari-hir.workspace = true
kagari-ir.workspace = true
kagari-syntax.workspace = true
